bootstrap/argocd/templates/accounts-ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/target: grigri.cloud
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
  name: accounts-external
spec:
  ingressClassName: nginx-external
  rules:
  - host: &host accounts.grigri.cloud
    http:
      paths:
      - backend:
          service:
            name: argocd-dex-server
            port:
              number: 5556
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - *host
    secretName: accounts-external-tls-certificate
